# ellog

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Log.cc  Log.hh
test/: CMakeLists.txt  test-stdout.cc
